# generic-tflmicro

./: CMakeLists.txt  README.md
examples/hello_world/: CMakeLists.txt  main_functions.cpp
src/: CMakeLists.txt
src/tensorflow/lite/micro/: micro_allocator.cpp  micro_error_reporter.h
src/tensorflow/lite/micro/kernels/: svdf_common.cpp
